--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   badges: ^2.0.1
   intl: ^0.17.0
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
