--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   badges: ^2.0.1
   intl: ^0.17.0
   qr_flutter: ^4.0.0
+  add_to_cart_animation: ^0.0.7
 
 dev_dependencies:
   flutter_test:
