--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   intl: ^0.17.0
   qr_flutter: ^4.0.0
   add_to_cart_animation: ^0.0.7
+  fluttertoast: ^8.1.2
 
 dev_dependencies:
   flutter_test:
