--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   qr_flutter: ^4.0.0
   add_to_cart_animation: ^0.0.7
   fluttertoast: ^8.1.2
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
