--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,16 @@ dependencies:
   shimmer: ^2.0.0
   get: ^4.6.1
   dio: ^4.0.6
-  
+  json_annotation: ^4.4.0
+  freezed: ^2.0.2
+  freezed_annotation: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.9.2
+  json_serializable: ^6.1.6
+  build_runner: ^2.1.10
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
