--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   freezed: ^2.0.2
   freezed_annotation: ^2.0.1
   flutter_secure_storage: ^5.0.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
