--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   mask_text_input_formatter: ^2.4.0
   badges: ^2.0.1
   intl: ^0.17.0
-  qr_flutter: ^4.0.0
+
   add_to_cart_animation: ^0.0.7
   fluttertoast: ^8.1.2
   shimmer: ^2.0.0
@@ -49,6 +49,7 @@ dependencies:
   freezed_annotation: ^2.0.1
   flutter_secure_storage: ^5.0.2
   http: ^0.13.5
+  clipboard: ^0.1.3
 
 dev_dependencies:
   flutter_test:
